# datamatrix-reader

./: .gitignore  Cargo.toml  README.md  dm_only.py  dm_reader.py
lib/: Helpers.py
src/: lib.rs  main.rs
