[package]
name = "datamatrix-reader"
version = "0.1.0"
authors = ["Aaron Leopold <aaronleopold1221@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
regex = "1.1.0"
fancy-regex = "0.3.5"
image = "0.23.9"
csv = "1.1"
chrono = "0.4.15"
clap = "2.33.3"